test/Fail/NoPatternMatching.err
NoPatternMatching.agda:10.1-10: error: [NeedOptionPatternMatching]
Pattern matching is disabled (use option --pattern-matching to
enable it)
when checking the clause left hand side
fail unit
